--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .btn {
   
-    font-size: 4em;
+    font-size: 12em;
     margin: 5px;
 }
 
@@ -29,3 +29,45 @@ ul {
     border-radius: 10px;
 }
 
+
+
+@media only screen and (max-width: 1200px) {
+    
+    .btn {
+      
+        font-size: 10em;
+        margin: 5px;
+    }
+      }
+
+
+      @media only screen and (max-width: 1000px) {
+    
+        .btn {
+          
+            font-size: 7em;
+            margin: 5px;
+        }
+          }
+    
+    
+     
+
+@media only screen and (max-width: 768px) {
+    
+    .btn {
+      
+        font-size: 5em;
+        margin: 5px;
+    }
+      }
+
+
+@media only screen and (max-width: 600px) {
+    
+.btn {
+  
+    font-size: 5em;
+    margin: 5px;
+}
+  }
