--- a/style.css
+++ b/style.css
@@ -1,73 +1,62 @@
 * {
-    box-sizing: border-box;
-  }
-
+  box-sizing: border-box;
+}
 
 .btn {
-  
-    font-size: 12em;
-    margin: 5px;
+  font-size: 12em;
+  margin: 5px;
 }
 
-#user-choice, #computer-choice {
-    font-size: 4em;
-    border-bottom: 2px solid black;
-    margin-top: 2px;
-    top: 50%;
-    bottom: 0;
+#user-choice,
+#computer-choice {
+  font-size: 4em;
+  border-bottom: 2px solid black;
+  margin-top: 2px;
+  top: 50%;
+  bottom: 0;
 }
-
 
 ul {
-    list-style: none;
+  list-style: none;
 }
-
 
 .players {
-    background: #343A40;
-    height: 25vh !important;
-    border-radius: 10px;
+  background: #343a40;
+  height: 25vh !important;
+  border-radius: 10px;
 }
 
-
+#player-success,
+#computer-success,
+#player-failure,
+#computer-failure {
+  display: none;
+}
 
 @media only screen and (max-width: 1200px) {
-    
-    .btn {
-      
-        font-size: 10em;
-        margin: 5px;
-    }
-      }
+  .btn {
+    font-size: 10em;
+    margin: 5px;
+  }
+}
 
-
-      @media only screen and (max-width: 1000px) {
-    
-        .btn {
-          
-            font-size: 7em;
-            margin: 5px;
-        }
-          }
-    
-    
-     
+@media only screen and (max-width: 1000px) {
+  .btn {
+    font-size: 7em;
+    margin: 5px;
+  }
+}
 
 @media only screen and (max-width: 768px) {
-    
-    .btn {
-      
-        font-size: 5em;
-        margin: 5px;
-    }
-      }
-
-
-@media only screen and (max-width: 600px) {
-    
-.btn {
-  
+  .btn {
     font-size: 5em;
     margin: 5px;
-}
   }
+}
+
+@media only screen and (max-width: 600px) {
+  .btn {
+    font-size: 5em;
+    margin: 5px;
+  }
+}
