Reformatted some HTML and added comments to include better descriptions of areas of the page

--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ ul {
   border-radius: 10px;
 }
 
-#player-success,
+/* #player-success,
 #computer-success,
 #player-failure,
 #computer-failure {
   display: none;
-}
+} */
 
 @media only screen and (max-width: 1200px) {
   .btn {
